Fixed the 403 auth error, added AuthService and UserService